--- a/charts/rancher-monitoring/104.0.0-rc1+up57.0.3/templates/prometheus/servicemonitor.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up57.0.3/templates/prometheus/servicemonitor.yaml
@@ -35,8 +35,9 @@ spec:
     bearerTokenFile: {{ .Values.prometheus.serviceMonitor.bearerTokenFile }}
     {{- end }}
     path: "{{ trimSuffix "/" .Values.prometheus.prometheusSpec.routePrefix }}/metrics"
+    metricRelabelings: 
     {{- if .Values.prometheus.serviceMonitor.metricRelabelings }}
-    metricRelabelings: {{- tpl (toYaml .Values.prometheus.serviceMonitor.metricRelabelings | nindent 6) . }}
+    {{- tpl (toYaml .Values.prometheus.serviceMonitor.metricRelabelings | nindent 6) . }}
     {{- end }}
     {{ if .Values.global.cattle.clusterId }}
       - sourceLabels: [__address__]
