--- a/charts/rancher-monitoring/104.0.0-rc1+up57.0.3/charts/grafana/templates/tests/test.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up57.0.3/charts/grafana/templates/tests/test.yaml
@@ -34,13 +34,17 @@ spec:
   {{- end }}
   containers:
     - name: {{ .Release.Name }}-test
-      image: "{{ template "system_default_registry" . }}{{ .Values.testFramework.image}}:{{ .Values.testFramework.tag }}"
+      image: "{{ template "system_default_registry" . | default .Values.testFramework.image.registry }}/{{ .Values.testFramework.image.repository }}:{{ .Values.testFramework.image.tag }}"
       imagePullPolicy: "{{ .Values.testFramework.imagePullPolicy}}"
       command: ["/opt/bats/bin/bats", "-t", "/tests/run.sh"]
       volumeMounts:
         - mountPath: /tests
           name: tests
           readOnly: true
+      {{- with .Values.testFramework.resources }}
+      resources:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
   volumes:
     - name: tests
       configMap:
