--- a/release.yaml
+++ b/release.yaml
@@ -223,10 +223,12 @@ rancher-monitoring-crd:
   - 103.1.1+up45.31.1
   - 104.0.0-rc1+up45.31.1
 rancher-vsphere-cpi:
+  - 104.0.1+up1.8.0 
   - 104.0.0+up1.7.0
   - 102.2.0+up1.6.0
   - 103.1.0+up1.7.0
 rancher-vsphere-csi:
+  - 104.0.1+up3.3.0-rancher1
   - 104.0.0+up3.1.2-rancher4
   - 102.2.0+up3.0.2-rancher1
   - 103.1.0+up3.1.2-rancher1
