[dev-v2.9] Fix KSM/kubelet relabellings in rancher monitoring up57.X (#4170)
Signed-off-by: Alexandre Lamarre <alexandre.lamarre@suse.com>

--- a/charts/rancher-monitoring/104.0.0-rc1+up57.0.3/templates/exporters/kubelet/servicemonitor.yaml
+++ b/charts/rancher-monitoring/104.0.0-rc1+up57.0.3/templates/exporters/kubelet/servicemonitor.yaml
@@ -45,7 +45,7 @@ spec:
 {{- if .Values.kubelet.serviceMonitor.metricRelabelings }}
     metricRelabelings:
     {{- if .Values.kubelet.serviceMonitor.metricRelabelings }}
-    {{ tpl (toYaml .Values.kubelet.serviceMonitor.metricRelabelings | indent 4) . }}
+    {{- tpl (toYaml .Values.kubelet.serviceMonitor.metricRelabelings | nindent 6) . }}
     {{- end }}
     {{ if .Values.global.cattle.clusterId }}
       - sourceLabels: [__address__]
