[dev-v2.9] rancher-cis-benchmark 6.0.0-rc4 update (#4166)

--- a/charts/rancher-cis-benchmark/6.0.0-rc4/values.yaml
+++ b/charts/rancher-cis-benchmark/6.0.0-rc4/values.yaml
@@ -8,7 +8,7 @@ image:
     tag: v1.0.13
   securityScan:
     repository: rancher/security-scan
-    tag: v0.2.15
+    tag: v0.2.16-rc1
   sonobuoy:
     repository: rancher/mirrored-sonobuoy-sonobuoy
     tag: v0.57.1
