--- a/packages/rancher-cis-benchmark/charts/values.yaml
+++ b/packages/rancher-cis-benchmark/charts/values.yaml
@@ -8,7 +8,7 @@ image:
     tag: v1.0.13
   securityScan:
     repository: rancher/security-scan
-    tag: v0.2.15
+    tag: v0.2.16-rc1
   sonobuoy:
     repository: rancher/mirrored-sonobuoy-sonobuoy
     tag: v0.57.1
