[dev-v2.9] rancher-vsphere-csi 104.0.0+up3.3.0-rancher1 add (#4165)

--- a/charts/rancher-vsphere-csi/104.0.0+up3.3.0-rancher1/Chart.yaml
+++ b/charts/rancher-vsphere-csi/104.0.0+up3.3.0-rancher1/Chart.yaml
@@ -1,14 +1,14 @@
 annotations:
   catalog.cattle.io/certified: rancher
   catalog.cattle.io/display-name: vSphere CSI
-  catalog.cattle.io/kube-version: '>= 1.20.0-0 < 1.29.0-0'
+  catalog.cattle.io/kube-version: '>= 1.20.0-0 < 1.31.0-0'
   catalog.cattle.io/namespace: kube-system
   catalog.cattle.io/os: linux,windows
   catalog.cattle.io/permits-os: linux,windows
-  catalog.cattle.io/rancher-version: '>= 2.9.0-0 < 2.10.0-0'
+  catalog.cattle.io/rancher-version: '>= 2.9.0-0'
   catalog.cattle.io/release-name: vsphere-csi
 apiVersion: v1
-appVersion: 3.1.2-rancher4
+appVersion: 3.3.0-rancher1
 description: vSphere Cloud Storage Interface (CSI)
 icon: https://charts.rancher.io/assets/logos/vsphere-csi.svg
 keywords:
@@ -21,4 +21,4 @@ maintainers:
 name: rancher-vsphere-csi
 sources:
 - https://github.com/kubernetes-sigs/vsphere-csi-driver
-version: 104.0.0+up3.1.2-rancher4
+version: 104.0.0+up3.3.0-rancher1
