Fix default metric relabellings for KSM in rancher-monitoring up45.31.1 (#4174)
Signed-off-by: Alexandre Lamarre <alexandre.lamarre@suse.com>

--- a/charts/rancher-monitoring/104.0.0+up45.31.1/templates/exporters/kubelet/servicemonitor.yaml
+++ b/charts/rancher-monitoring/104.0.0+up45.31.1/templates/exporters/kubelet/servicemonitor.yaml
@@ -34,8 +34,8 @@ spec:
     bearerTokenFile: /var/run/secrets/kubernetes.io/serviceaccount/token
     honorLabels: true
     metricRelabelings:
-    {{ if .Values.kubelet.serviceMonitor.metricRelabelings }}
-    {{- tpl (toYaml .Values.kubelet.serviceMonitor.metricRelabelings | nindent 4) . }}
+    {{- if .Values.kubelet.serviceMonitor.metricRelabelings }}
+    {{ tpl (toYaml .Values.kubelet.serviceMonitor.metricRelabelings | nindent 4) . }}
     {{- end }}
     {{ if .Values.global.cattle.clusterId }}
       - sourceLabels: [__address__]
