--- a/release.yaml
+++ b/release.yaml
@@ -30,6 +30,8 @@ rancher-cis-benchmark-crd:
   - 6.1.0-rc1
 rancher-webhook:
   - 105.0.0+up0.6.0-rc.1
+rancher-provisioning-capi:
+  - 105.0.0+up0.4.0
 rancher-windows-gmsa:
   - 4.0.0
 rancher-windows-gmsa-crd:
